# sandbox

./: .gitmodules  CMakeLists.txt  README.md
src/: CMakeLists.txt
src/common/: CMakeLists.txt  application.cpp  application.hpp  compromises.md  file_io.cpp  file_io.h  file_io.hpp  geometry_utils.hpp  gltf_loader.cpp  gltf_loader.h  id_allocator.hpp  imgui_bgfx.cpp  imgui_bgfx.h  imgui_bgfx_shaders.h  pre_computations.cpp  pre_computations.h  pre_computations.hpp  procedural_shapes.cpp  procedural_shapes.h  renderer.cpp  renderer.hpp  skeleton_mesh.cpp  skeleton_mesh.h
src/common/shaders/: brdf_lut_fs.sc  irradiance_convolution_fs.sc  sampling.sc  varying.def.sc
src/pbr/: CMakeLists.txt  camera_control.cpp  camera_control.h  cloth.cpp  cloth.h  controls.hpp  geometry.cpp  geometry.h  math_utils.hpp  pbr.cpp  pbr.cpp.bak  ray_caster.cpp  ray_caster.h  timer.hpp
src/pbr/shaders/: brdf_lut_vs.sc  intersect.sc  material.sc  oit.sc  oit_composite_fs.sc  oit_composite_vs.sc  parallax.sc  pbr_fs.sc  pbr_vs.sc  prefilter_fs.sc  shadowmap_fs.sc  shadowmap_vs.sc  shadows.sc  skybox_fs.sc  skybox_vs.sc  tonemapping_fs.sc  varying.def.sc
src/pbr/textures/skybox/: texture-cubemap-test.ktx
src/screen_quad/: CMakeLists.txt  screen_quad.cpp
src/screen_quad/shaders/: screen_quad_fs.sc  varying.def.sc
